--- a/OptiScaler/OptiScaler.vcxproj
+++ b/OptiScaler/OptiScaler.vcxproj
@@ -322,6 +322,9 @@ powershell -Command "Start-Sleep -Seconds 2; $commit = git rev-parse --short HEA
     <ClInclude Include="shaders\depth_invert\DI_Dx12.h" />
     <ClInclude Include="shaders\depth_invert\precompiled\DI_Shader.h" />
     <ClInclude Include="shaders\format_transfer\precompile\FT_Shader.h" />
+    <ClInclude Include="shaders\hud_copy\HudCopy_Common.h" />
+    <ClInclude Include="shaders\hud_copy\HudCopy_Dx12.h" />
+    <ClInclude Include="shaders\hud_copy\precompile\HudCopy_Shader.h" />
     <ClInclude Include="shaders\output_scaling\fsr1\ffx_fsr1.h" />
     <ClInclude Include="shaders\output_scaling\fsr1\FSR_EASU_Shader_Vk.h" />
     <ClInclude Include="shaders\output_scaling\OS_Vk.h" />
@@ -515,6 +518,7 @@ powershell -Command "Start-Sleep -Seconds 2; $commit = git rev-parse --short HEA
     <ClCompile Include="inputs\FSR2_Vk.cpp" />
     <ClCompile Include="inputs\XeSS_Dx11.cpp" />
     <ClCompile Include="shaders\depth_invert\DI_Dx12.cpp" />
+    <ClCompile Include="shaders\hud_copy\HudCopy_Dx12.cpp" />
     <ClCompile Include="shaders\output_scaling\OS_Vk.cpp" />
     <ClCompile Include="shaders\rcas\RCAS_Vk.cpp" />
     <ClCompile Include="shaders\Shader_Dx12.cpp" />
