--- a/OptiScaler.ini
+++ b/OptiScaler.ini
@@ -10,7 +10,7 @@ Dx11Upscaler=auto
 Dx12Upscaler=auto
 
 ; Select Upscaler for Vulkan games
-; fsr21, fsr22, fsr31, xess, dlss - Default (auto) is fsr21
+; fsr21 (native VK), fsr22 (native VK), fsr31 (native VK), xess (native VK), fsr21_12 (VKon12), fsr31_12 (VKon12, FSR4), dlss - Default (auto) is fsr22
 VulkanUpscaler=auto
 
 
