Add reg spoof info to ini

--- a/OptiScaler.ini
+++ b/OptiScaler.ini
@@ -836,6 +836,10 @@ D3DFeatureLevel=auto
 ; true or false - Default (auto) is false
 UEIntelAtomics=auto
 
+; Spoofs Hags, Vendor and Driver version at registry level
+; true or false - Default (auto) is false
+Registry=auto
+
 
 
 ; -------------------------------------------------------
